--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@ function showDriveResult() {
   } else if (step1 === 'Obey' && step2 === 'Instructions' && step3 === 'CompleteSubmission') {
     message = "Your complete submission pleases me beyond words.";
   } else {
-    message = "Your fate is sealed.";
+    message = "Choose from all three options first, babygirl.";
   }
 
   resultDiv.textContent = message;
