--- a/index.html
+++ b/index.html
@@ -446,18 +446,18 @@
   Control: "Take Control",
   Tease: "Turn Her On",
   Obey: "Make Her Obey",
-  MindGames: "Mind Games",
-  SlowDenial: "Slow Denial",
-  Whispers: "Whispers",
-  PublicPlay: "Public Play",
-  Instructions: "Instructions",
-  Collapse: "Collapse Her",
-  Surrender: "Make Her Surrender",
-  Tears: "Tears of Need",
-  Desperation: "Edge of Madness",
-  Begging: "Beg For It",
-  Moaning: "Helpless Moans",
-  Shame: "Public Shame",
+  MindGames: "I'd love to wear (or not wear) something, or anything, you want.",
+  SlowDenial: "I think I'll explore some other passive task to please you.",
+  Whispers: "I wouldn't mind starting naked and ready to do whatever you tell me in the video.",
+  PublicPlay: "I'd rather you instruct me which clothes to take off, how, and when.",
+  Instructions: "Maybe I can be interacting with some thing else in the room?",
+  Collapse: "I will skip on wearing panties for a week. You can check in on me any time I am free.",
+  Surrender: " I know I look hot in my pink and nude bras. I'll wear only these for the next two days: you can check in any time I am free.",
+  Tears: "I'll voluntarily learn how to dirty-talk with you throughout the week, right here on this webpage.",
+  Desperation: "I'll send you a voice note affirming my submission to you, every night of this week, along with my good night text",
+  Begging: "I would think nothing of playing with my boobs for you, while kneeling. I love to be your good girl!",
+  Moaning: "Pleast let me be naked on video for you, standing upright and saying "I love being your good girl", and then turning around to present my ass to you.",
+  Shame: "I will start out standing, wearing only a vest and panties, and then lower my panties to my thighs to present my pussy to you, all the while smiling at you.",
   Thrill: "Public Thrill",
   CompleteSubmission: "Total Submission"
 };
