--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="icon" href="bbg2.jpeg" type="image/x-icon" />
   <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
   <style>
+    .hidden {
+  display: none;
+}
     body {
       margin: 0;
       font-family: sans-serif;
@@ -458,8 +461,8 @@
   Begging: "I would think nothing of playing with my boobs for you, while kneeling. I love to be your good girl!",
   Moaning: "Pleast let me be naked on video for you, standing upright and saying "I love being your good girl", and then turning around to present my ass to you.",
   Shame: "I will start out standing, wearing only a vest and panties, and then lower my panties to my thighs to present my pussy to you, all the while smiling at you.",
-  Thrill: "Public Thrill",
-  CompleteSubmission: "Total Submission"
+  Thrill: "I will start out standing, wearing only a vest and panties, and then lower my vest to my thighs to present my breasts to you, all the while smiling at you.",
+  CompleteSubmission: "I'll strip down completely, and take a pic of me sitting in a chair and smiling in a mirror selfie, hair down, with an arm loosely held behind me, my legs wide apart for you to savour what's in between."
 };
 
 function formatLabel(key) {
